add event form schema, new event page, and UI components; update styles and database schema

--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "lint": "next lint",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate ",
-    "db:studio": "drrizzle-kit studio" 
+    "db:studio": "drrizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.12",
+    "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.38.4",
-    "lucide-react": "^0.471.1",
+    "lucide-react": "^0.471.2",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-server": "^0.4.9",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
