--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.38.4",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.471.2",
     "next": "15.1.4",
     "react": "^19.0.0",
