--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "drizzle-orm": "^0.38.4",
+    "framer-motion": "^12.0.3",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.471.2",
     "next": "15.1.4",
